--- a/packages/pluggableWidgets/rich-text-web/src/ui/RichTextIcons.scss
+++ b/packages/pluggableWidgets/rich-text-web/src/ui/RichTextIcons.scss
@@ -42,8 +42,7 @@ $icons: (
     List-roman: "\e921",
     Inline-code: "\e923",
     View-edit-code: "\e924",
-    Code-block: "\e925",
-    Expand: "\e926"
+    Code-block: "\e925"
 );
 
 .widget-rich-text {
