fix: readonly resize module and fullscreen editor height

--- a/packages/pluggableWidgets/rich-text-web/src/ui/RichText.scss
+++ b/packages/pluggableWidgets/rich-text-web/src/ui/RichText.scss
@@ -12,6 +12,7 @@ $rte-brand-primary: #264ae5;
     }
     .ql-container {
         border: unset;
+        overflow: hidden;
     }
 
     &.fullscreen {
