feat(rich-text): add new icons to RichTextIcons.scss

--- a/packages/pluggableWidgets/rich-text-web/src/ui/RichTextIcons.scss
+++ b/packages/pluggableWidgets/rich-text-web/src/ui/RichTextIcons.scss
@@ -43,7 +43,22 @@ $icons: (
     Inline-code: "\e923",
     View-edit-code: "\e924",
     Code-block: "\e925",
-    Expand: "\e926"
+    Expand: "\e926",
+    Align-middle: "\e927",
+    Align-bottom: "\e928",
+    Align-top: "\e929",
+    Cell: "\e92a",
+    Check: "\e92b",
+    Close: "\e92c",
+    Erase: "\e92d",
+    Delete: "\e92e",
+    Copy: "\e92f",
+    Column: "\e930",
+    Row: "\e931",
+    Save: "\e932",
+    Merge: "\e933",
+    Wrap: "\e934",
+    Palette: "\e935"
 );
 
 .widget-rich-text {
