fix: make the "select all button" disabled when there are no items in the list

--- a/packages/pluggableWidgets/combobox-web/src/ui/Combobox.scss
+++ b/packages/pluggableWidgets/combobox-web/src/ui/Combobox.scss
@@ -77,6 +77,16 @@ $cb-skeleton-dark: #d2d2d2;
                 content: "";
                 border-color: var(--btn-default-bg-hover, $cb-hover-color);
             }
+
+            &-select-all-button {
+                & + label {
+                    transition: color 0.2s ease-in-out;
+                }
+
+                &-disabled + label {
+                    color: var(--color-default-dark, $cb-disabled-text-color);
+                }
+            }
         }
 
         &-footer {
