--- a/packages/pluggableWidgets/document-viewer-web/ui/documentViewerIcons.scss
+++ b/packages/pluggableWidgets/document-viewer-web/ui/documentViewerIcons.scss
@@ -23,6 +23,9 @@ $icons: (
 
 div.widget-document-viewer {
     &-controls {
+        button {
+            margin-left: var(--spacing-smaller, 4px);
+        }
         .icons {
             font-family: "DocViewer" !important;
             font-size: 16px;
