fix(rich-text-web): remove default border from table css in the editor

--- a/packages/pluggableWidgets/rich-text-web/src/utils/formats/quill-table-better/assets/css/quill-table-better.scss
+++ b/packages/pluggableWidgets/rich-text-web/src/utils/formats/quill-table-better/assets/css/quill-table-better.scss
@@ -69,6 +69,12 @@ $focused-border: 1px solid $focused-border-color;
     background-color: $focused-cell-background;
 }
 
+.ql-editor {
+    td {
+        border: none;
+    }
+}
+
 .ql-table {
     &-border-shadow {
         @include boxShadow($border-color-simple);
