--- a/packages/modules/data-widgets/src/themesource/datawidgets/web/_datagrid.scss
+++ b/packages/modules/data-widgets/src/themesource/datawidgets/web/_datagrid.scss
@@ -35,18 +35,21 @@ $root: ".widget-datagrid";
     }
 
     /* Column Header */
-    .th {
-        display: flex;
-        align-items: flex-start;
-        font-weight: 600;
-        background-color: var(--bg-color-secondary, $dg-background-color);
-        border-width: 0;
-        border-color: var(--grid-border-color, $dg-grid-border-color);
-        padding: var(--spacing-medium, $dg-spacing-medium);
-        top: 0;
-        min-width: 0;
-        position: relative;
+    @at-root {
+        :where(.widget-datagrid-grid .th) {
+            display: flex;
+            align-items: flex-start;
+            background-color: var(--bg-color-secondary, $dg-background-color);
+            border-width: 0;
+            border-color: var(--grid-border-color, $dg-grid-border-color);
+            padding: var(--spacing-medium, $dg-spacing-medium);
+            top: 0;
+            min-width: 0;
+            position: relative;
+        }
+    }
 
+    .th {
         &.dragging {
             opacity: 0.5;
             &.dragging-over-self {
@@ -94,6 +97,7 @@ $root: ".widget-datagrid";
             padding: 0 4px;
             align-self: stretch;
             cursor: col-resize;
+            margin-right: -12px;
 
             &:hover .column-resizer-bar {
                 background-color: var(--brand-primary, $dg-brand-primary);
@@ -128,6 +132,7 @@ $root: ".widget-datagrid";
             margin: 1px 1px calc((-1 * var(--spacing-smaller, $dg-dragging-effect-size)) + 2px);
             display: flex;
             align-items: baseline;
+            font-weight: 600;
 
             span {
                 min-width: 0;
@@ -159,17 +164,8 @@ $root: ".widget-datagrid";
         .filter {
             display: flex;
             margin-top: 4px;
-            input:not([type="checkbox"]) {
-                font-weight: normal;
-                flex-grow: 1;
-                width: 100%;
-            }
             > .form-group {
                 margin-bottom: 0;
-            }
-            > .form-control {
-                flex: unset;
-                min-width: unset;
             }
         }
     }
@@ -227,6 +223,9 @@ $root: ".widget-datagrid";
                 padding: 0 16px;
                 background: var(--bg-color-secondary, $dg-background-color);
                 z-index: 102;
+                overflow-y: auto;
+                width: fit-content;
+                max-width: 500px;
                 border-radius: 3px;
                 border: 1px solid transparent;
                 list-style-type: none;
@@ -242,6 +241,8 @@ $root: ".widget-datagrid";
                         margin: 8px;
                         font-weight: normal;
                         white-space: nowrap;
+                        overflow-x: hidden;
+                        text-overflow: ellipsis;
                     }
                 }
             }
@@ -319,6 +320,12 @@ $root: ".widget-datagrid";
     }
 }
 
+:where(.table .th .filter input:not([type="checkbox"])) {
+    font-weight: normal;
+    flex-grow: 1;
+    width: 100%;
+}
+
 .pagination-bar {
     display: flex;
     justify-content: flex-end;
@@ -374,17 +381,15 @@ $root: ".widget-datagrid";
     padding: 0 16px;
     background: var(--bg-color-secondary, $dg-background-color);
     z-index: 102;
+    overflow-y: auto;
+    width: fit-content;
+    max-width: 500px;
     border-radius: 3px;
     border: 1px solid transparent;
     list-style-type: none;
     -webkit-box-shadow: 0 2px 20px 1px rgba(32, 43, 54, 0.08);
     -moz-box-shadow: 0 2px 20px 1px rgba(32, 43, 54, 0.08);
     box-shadow: 0 2px 20px 1px rgba(32, 43, 54, 0.08);
-
-    &.overflow {
-        height: 250px;
-        overflow-y: scroll;
-    }
 
     li {
         display: flex;
@@ -395,6 +400,8 @@ $root: ".widget-datagrid";
             margin: 8px;
             font-weight: normal;
             white-space: nowrap;
+            overflow-x: hidden;
+            text-overflow: ellipsis;
         }
     }
 }
@@ -402,13 +409,16 @@ $root: ".widget-datagrid";
 #{$root} {
     position: relative;
 
+    &-grid {
+        display: grid !important;
+    }
+
     &-grid-head {
-        display: grid;
+        display: contents;
     }
 
     &-grid-body {
-        display: grid;
-        position: relative;
+        display: contents;
     }
 
     &.widget-datagrid-selection-method-click {
@@ -470,6 +480,7 @@ $root: ".widget-datagrid";
             border-radius: 4px;
             height: 16px;
             width: 100%;
+            min-width: 32px;
             max-width: 148px;
 
             &-small {
@@ -521,8 +532,13 @@ $root: ".widget-datagrid";
     margin: 0 auto;
 }
 
-:where(.widget-datagrid-grid-body.infinite-loading) {
+:where(.widget-datagrid-grid.infinite-loading) {
     overflow-y: auto;
+}
+
+:where(.infinite-loading .widget-datagrid-grid-head .th) {
+    position: sticky;
+    z-index: 1;
 }
 
 @keyframes skeleton-loading {
