--- a/packages/pluggableWidgets/rich-text-web/src/components/ModalDialog/Dialog.scss
+++ b/packages/pluggableWidgets/rich-text-web/src/components/ModalDialog/Dialog.scss
@@ -27,6 +27,10 @@
 
             .code-input {
                 min-height: 50vh;
+
+                .cm-editor {
+                    width: 100%;
+                }
             }
         }
 
