feat: add "load more" button to gallery

--- a/packages/modules/data-widgets/src/themesource/datawidgets/web/_gallery.scss
+++ b/packages/modules/data-widgets/src/themesource/datawidgets/web/_gallery.scss
@@ -88,3 +88,8 @@ $gallery-screen-md: $screen-md;
 .widget-gallery-item-button {
     width: inherit;
 }
+
+.widget-gallery-load-more {
+    display: flex;
+    justify-content: center;
+}
