--- a/packages/modules/data-widgets/src/themesource/datawidgets/web/_datagrid-dropdown-filter.scss
+++ b/packages/modules/data-widgets/src/themesource/datawidgets/web/_datagrid-dropdown-filter.scss
@@ -149,6 +149,11 @@ $root: ".widget-dropdown-filter";
         &:has(+ #{$root}-toggle) {
             border-inline-end: 1px solid var(--gray, #787d87);
         }
+
+        &:focus {
+            border-radius: 2px;
+            outline: 2px solid var(--brand-primary, $brand-primary);
+        }
     }
 
     &-state-icon {
