feat: rework captions
- introduce new options to configure placeholder text and empty caption
- show placeholder when widget is not open and empty
- split emptySelectionCaption and emptyOptionCaption

--- a/packages/modules/data-widgets/src/themesource/datawidgets/web/_datagrid-dropdown-filter.scss
+++ b/packages/modules/data-widgets/src/themesource/datawidgets/web/_datagrid-dropdown-filter.scss
@@ -281,7 +281,7 @@ $root: ".widget-dropdown-filter";
         width: initial;
     }
 
-    &:not(:focus-within) {
+    &:not(:focus-within):not([data-empty]) {
         #{$root}-input {
             opacity: 0;
             flex-shrink: 1;
