--- a/packages/modules/data-widgets/src/themesource/datawidgets/web/_datagrid.scss
+++ b/packages/modules/data-widgets/src/themesource/datawidgets/web/_datagrid.scss
@@ -410,7 +410,13 @@ $root: ".widget-datagrid";
     position: relative;
 
     &-grid {
-        display: grid !important;
+        &.table {
+            display: grid !important;
+        }
+    }
+
+    &-content {
+        overflow-x: auto;
     }
 
     &-grid-head {
